Updated for bookify-web2

--- a/fly.toml
+++ b/fly.toml
@@ -1,17 +1,17 @@
-# fly.toml app configuration file generated for bookify-web on 2023-05-01T23:08:54+03:00
+# fly.toml app configuration file generated for bookify-web2 on 2023-06-01T20:54:22+03:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "bookify-web"
-primary_region = "waw"
+app = "bookify-web2"
+primary_region = "ams"
 kill_signal = "SIGTERM"
 
 [deploy]
   release_command = "/app/bin/migrate"
 
 [env]
-  PHX_HOST = "bookify-web.fly.dev"
+  PHX_HOST = "bookify-web2.fly.dev"
   PORT = "8080"
 
 [http_service]
@@ -19,6 +19,7 @@ kill_signal = "SIGTERM"
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
+  min_machines_running = 0
   [http_service.concurrency]
     type = "connections"
     hard_limit = 1000
